--- a/service.yml
+++ b/service.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app.kubernetes.io/name: project2
+    app: project2
   ports:
     - port: 80
       targetPort: 80
